--- a/app/src/main/res/layout/activity_main_detail.xml
+++ b/app/src/main/res/layout/activity_main_detail.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/layout"
-    android:onClick="handleClickAnimation"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:id="@+id/btn_press"
@@ -16,8 +12,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintVertical_bias="0.1"
         />
+
 
     <TextView
         android:id="@+id/lbl_keyframe"
@@ -29,6 +26,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="animated keyframe"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
